--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -66,7 +66,7 @@
         Customers.
       </p>
       <div class="imagesContainer">
-        <a href="/menu.html"
+        <a href="menu.html"
           ><img
             src="images/pasta.jpg"
             alt="pasta meal with greens"
@@ -74,7 +74,7 @@
             height="250"
             class="custom"
         /></a>
-        <a href="/menu.html"
+        <a href="menu.html"
           ><img
             src="images/meat.jpg"
             alt="Fresh meat served with homemade spices"
@@ -82,7 +82,7 @@
             height="250"
             class="custom"
         /></a>
-        <a href="/menu.html"
+        <a href="menu.html"
           ><img
             src="images/pork.jpg"
             alt="Chopped Pork and Wonton Soup"
@@ -90,7 +90,7 @@
             height="250"
             class="custom"
         /></a>
-        <a href="/menu.html"
+        <a href="menu.html"
           ><img
             src="images/beefbroccoli.jpg"
             alt=" A plate of Beef served with Broccoli, Vegan friendly "
