--- a/restaurant/gallery.html
+++ b/restaurant/gallery.html
@@ -48,7 +48,7 @@
     <!--This is our first heading -->
     <div class="contain_images">
       <video width="auto" height="300px" controls autoplay muted style="margin-left:250px" loop>
-        <source src="images/new video.mp4" type="video/mp4">
+        <source src="images/New video.mp4" type="video/mp4">
              
       </video>
       <img
